Fix reorder(Variable, State[]) returning null for AugmentedProbTable-based   potentials (#562)
  Implement state-reordering in AugmentedProbTable using the same index-displacement
  algorithm as TablePotential, operating on VariableExpression[] instead of double[].
  AugmentedProbTablePotential and UnivariateDistrPotential now delegate to it instead
  of returning null, which left the potential unreordered after a state permutation.