@@ -72,8 +72,8 @@ import java.util.List;
         if (this.role == null) {
             this.role = PotentialRole.CONDITIONAL_PROBABILITY;
         }
-        finiteStatesVariables = new ArrayList<Variable>();
-        parameterVariables = new ArrayList<Variable>();
+        finiteStatesVariables = new ArrayList<>();
+        parameterVariables = new ArrayList<>();
         
         for (Variable variable : variables.subList(1, variables.size())) {
             if ((variable.getVariableType() == VariableType.FINITE_STATES) || (
@@ -321,8 +321,8 @@ import java.util.List;
     }
     
     public void setDistributionTable() {
-        List<Variable> vDistributionTable = new ArrayList<Variable>(finiteStatesVariables);
-        vDistributionTable.add(0, pseudoVariableDistribution);
+        List<Variable> vDistributionTable = new ArrayList<>(finiteStatesVariables);
+        vDistributionTable.addFirst(pseudoVariableDistribution);
         setDistributionTable(new AugmentedProbTable(vDistributionTable, role));
         initializeAugmentedProbTable();
     }
@@ -354,15 +354,7 @@ import java.util.List;
     @Override public Potential copy() {
         return new UnivariateDistrPotential(this);
     }
-    
-    @Override public boolean isUncertain() {
-        return false;
-    }
-    
-    /**
-     * UNCLEAR -- Makes sense??
-     */
-    
+
     @Override public void scalePotential(double scale) {
         this.getDistributionTable().scalePotential(scale);
     }
@@ -393,7 +385,7 @@ import java.util.List;
     
     @Override public String toString() {
         StringBuilder buffer = new StringBuilder();
-        buffer.append(variables.get(0).getName());
+        buffer.append(variables.getFirst().getName());
         if (variables.size() == 1) {
             buffer.append(" = ");
         } else if (variables.size() > 1) {
@@ -403,11 +395,10 @@ import java.util.List;
                 buffer.append(variables.get(i));
                 buffer.append(", ");
             }
-            buffer.append(variables.get(variables.size() - 1));
+            buffer.append(variables.getLast());
             buffer.append(" = ");
         }
-        buffer.append("UnivariteName" + probDensFunctionUnivariateName + " " + "Parametrization"
-                              + probDensFunctionParametrizationName + " ");
+        buffer.append("UnivariateName").append(probDensFunctionUnivariateName).append(" ").append("Parametrization").append(probDensFunctionParametrizationName).append(" ");
         
         if (getDistributionTable().values.length == 1) {
             buffer.append(getDistributionTable().values[0]);
@@ -432,10 +423,10 @@ import java.util.List;
         newOrderOfVariables.addAll(getParameterVariables());
         UnivariateDistrPotential newPotential = new UnivariateDistrPotential(newOrderOfVariables,
                                                                              getProbDensFunctionClass(), getPotentialRole());
-        newOrderOfVariables.remove(0);
+        newOrderOfVariables.removeFirst();
         // I do use getVariable(0) for be compliant with the comparison in int[]
         // accOffsets = potential.getAccumulatedOffsets(orderVariables);
-        newOrderOfVariables.add(0, getAugmentedProbTable().getVariable(0));
+        newOrderOfVariables.addFirst(getAugmentedProbTable().getVariable(0));
         AugmentedProbTable newDistributionTable = (AugmentedProbTable) getAugmentedProbTable()
                 .reorder(newOrderOfVariables.subList(0, size));
         newPotential.setDistributionTable(newDistributionTable);
@@ -444,8 +435,10 @@ import java.util.List;
     
     @Override
     public Potential reorder(Variable variable, State[] newOrder) {
-        // TODO Auto-generated method stub
-        return null;
+        UnivariateDistrPotential copy = new UnivariateDistrPotential(this);
+        AugmentedProbTable reorderedTable = distributionTable.reorder(variable, newOrder);
+        copy.setDistributionTable(reorderedTable);
+        return copy;
     }
     
 }
